--- a/gb/ncid277_2.md
+++ b/gb/ncid277_2.md
@@ -31,7 +31,7 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11726557.md#1" target="_blank">美国会通过国防授权法案 7大看点一次看懂</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11726557.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1003182344381160-600x400-1-150x120.jpg" align ="left"></a>周一（12月16日），美国国会参议院通过了7380亿美元的2020财年“国防授权法案”（NDAA）。该法案除了提到组建太空军、提升美军薪酬之外，还涉及诸多中国相关议题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728507.md#1" target="_blank">【新闻看点】习访澳宣布新政？惠誉降澳评级</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728507.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/08/308300450938-150x120.jpg" align ="left"></a>习到访澳门，路透社独家报导，可能会宣布一系列“惠澳”措施。不过就在习行将动身前夕，国际评级机构惠誉昨天（12月16日）发表了评级报告，把澳门的评级展望由“稳定”下调至“负面”，让北京出了洋相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728802.md#1" target="_blank">美驻华使馆推文：在中国境外 也受中共监控</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728802.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/c098732f9da5c7128ae86118aeb6418a-150x120.jpg" align ="left"></a>美国驻华使馆12月16日发推文说，一项新的报告指出，中国（中共）对网络自由的压制全球最严重，即使是中国境外的人也不安全。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:23 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728642.md#1" target="_blank">“火狐狸”视频暴红 却是官媒造假</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728642.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-11-150x120.jpg" align ="left"></a>中共官媒“中新网”周日刊登一段网传视频，称在黑龙江漠河市的公路上发现一只毛色鲜红的狐狸在雪中觅食，视频被纷纷转载。但随后被发现这段视频经过调色，拍摄地也不是黑龙江。“中新网”被迫公开道歉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733311.md#1" target="_blank">国际人权组织吁加拿大惩罚中共电视台</a><br></h3>总部位于香港和欧洲的人权组织“保障卫士（Safeguard Defenders）”向加拿大广播电视和电信委员会（CRTC）提出了投诉，并呼吁加拿大政府使用《腐败外国官员的受害者法》——加拿大版的《马格尼茨基法》，去惩罚那些负责广播这种认罪供词视频的人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731683.md#1" target="_blank">【翻墙必看】高级五毛花千芳为何遭网民嘲讽</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
 
 1.五毛花千芳曝中共经济衰败 母亲养老证遭收缴
